@@ -35,7 +35,12 @@ repository on GitHub.
 [[release-notes-6.0.1-junit-jupiter-bug-fixes]]
 ==== Bug Fixes
 
-* ❓
+* A regression introduced in version 6.0.0 caused an exception when using `@CsvSource` or
+  `@CsvFileSource` if the `delimiter` or `delimiterString` attribute was set to `+++#+++`.
+  This occurred because `+++#+++` was used as the default comment character without an
+  option to change it. To resolve this, a new `commentCharacter` attribute has been added
+  to both annotations. Its default value remains `+++#+++`, but it can now be customized
+  to avoid conflicts with other control characters.
 
 [[release-notes-6.0.1-junit-jupiter-deprecations-and-breaking-changes]]
 ==== Deprecations and Breaking Changes
@@ -45,7 +50,8 @@ repository on GitHub.
 [[release-notes-6.0.1-junit-jupiter-new-features-and-improvements]]
 ==== New Features and Improvements
 
-* ❓
+* The `@CsvSource` and `@CsvFileSource` annotations now allow specifying
+  a custom comment character using the new `commentCharacter` attribute.
 
 
 [[release-notes-6.0.1-junit-vintage]]
